# SkiaInAction

./: .gitignore  Paragraph.md  README.md  StartWithCMake.md  skia-lottie.md  skia-skcms.md
0.0.1_BuildSkia/: README.md
0.0.1_FirstWindowWithSkia/: CMakeLists.txt
0.0.1_FirstWindowWithSkia/src/: CMakeLists.txt
0.0.2_FirstWindowWithSkia/src/: main.cpp
0.0.3_SkiaUseOpenGL/: CMakeLists.txt  README.md
0.0.3_SkiaUseOpenGL/src/: CMakeLists.txt  GLContext.cpp  GLContext.h  main.cpp
BuildSkia/: README.md
Dawn/: CMakeLists.txt  ReadMe.txt  TestingImageProvider.h  main.cpp
Dawn/src/: CMakeLists.txt  DisplayParams.h  main.cpp
DawnDemo/: CMakeLists.txt  DisplayParams.cpp  DisplayParams.h  ReadMe.txt  WindowMain.cpp  WindowMain.h  main.cpp
EncryptSaveAndDecryptDemo/: CMakeLists.txt
EncryptSaveAndDecryptDemo/src/: AES.js  main.cpp
FirstWindowWithSkia/: CMakeLists.txt
FirstWindowWithSkia/src/: main.cpp
GPU表面/: CMakeLists.txt
GPU表面/src/: CMakeLists.txt  main.cpp
GPU表面/src/gl/: CreatePlatformGLTestContext_win.cpp  FlushFinishTracker.h  GLTestContext.h  GLWindowContext.h  GLWindowContext_win.cpp  SkWGL_win.cpp  TestContext.cpp  TestContext.h  WindowContext.cpp  WindowContext.h  WindowContextFactory_win.h
RasterAndOpenGL/: CMakeLists.txt  README.md
RasterAndOpenGL/src/: CMakeLists.txt  main.cpp
SkiaUseOpenGL/: CMakeLists.txt  README.md
SkiaUseOpenGL/src/: CMakeLists.txt  GLContext.cpp  GLContext.h  main.cpp
Todo/: README.md
几何图形/src/: main.cpp
动画/src/: main.cpp
动画Gif/: CMakeLists.txt
动画Gif/src/: main.cpp
动画Lottie/: CMakeLists.txt
动画Lottie/src/: main.cpp
图像/src/: main.cpp
图像SVG/: CMakeLists.txt
图像SVG/src/: CMakeLists.txt  main.cpp
图像处理/src/: main.cpp
图像解码/src/: main.cpp
在图片文件中绘图/src/: main.cpp
基本几何图形/: CMakeSettings.json
复杂几何图形/src/: main.cpp
大段文本/: CMakeLists.txt
大段文本/src/: main.cpp
如何在图片文件中绘图/: CMakeLists.txt
如何在图片文件中绘图/src/: main.cpp
如何在窗口中绘图(Windows)/src/: main.cpp
如何绘制基本几何图形/src/: main.cpp
如何绘制复杂几何图形/enc_temp_folder/6abb74fecf25798aa8da99f5b6fe08/: main.cpp
如何绘制复杂几何图形/src/: main.cpp
字体与文本/src/: main.cpp
文本与字体/: CMakeLists.txt
文本与字体/src/: main.cpp
文本段落/: CMakeLists.txt
文本段落/src/: main.cpp
文本编辑器/: CMakeLists.txt
文本编辑器/src/: CMakeLists.txt  main.cpp
文本编辑器/src/editor/: CMakeLists.txt  editor.cpp  shape.cpp  word_boundaries.cpp
波浪动画/: CMakeLists.txt
波浪动画/src/: main.cpp
测试/: CMakeLists.txt
测试/src/: main.cpp
渐变色着色器/: CMakeLists.txt
渐变色着色器/src/: main.cpp
理解Skia的颜色/: CMakeLists.txt
理解Skia的颜色/src/: main.cpp
画布/: CMakeLists.txt
画布/src/: main.cpp
画布与表面/: CMakeLists.txt
画布与表面/src/: main.cpp
着色器/: CMakeLists.txt
着色器/src/: main.cpp
窗口中绘图/: CMakeLists.txt
窗口中绘图/src/: CMakeLists.txt  main.cpp
绘制基本几何图形/: CMakeLists.txt
绘制基本几何图形/src/: CMakeLists.txt  main.cpp
表面/: CMakeLists.txt
表面/src/: main.cpp
表面Dawn/: CMakeLists.txt
表面Dawn/src/: main.cpp
表面GPU/src/gl/: FenceSync.h  FlushFinishTracker.cpp  GLTestContext.cpp  GLTestContext.h  GLWindowContext.cpp  GLWindowContext.h  GLWindowContext_win.cpp  GpuTimer.h  SkWGL.h  WindowContext.h
路径/: CMakeLists.txt
路径/src/: main.cpp
过滤器/src/: main.cpp
颜色/src/: main.cpp
